--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t negi007/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run negi007/react-test npm test -- --cover
+  - docker run negi007/react-test npm test -- --coverage
 
 after_success:
   - docker build -t negi007/multi-client ./client
