--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,16 @@ after_success:
   - docker push negi007/multi-nginx
   - docker push negi007/multi-server
   - docker push negi007/multi-worker
+
+  deploy:
+    provider: elasticbeanstalk
+    region: ap-south-1
+    app: multi-docker
+    env: MultiDocker-env
+    bucket_name: elasticbeanstalk-ap-south-1-877188100509
+    bucket_path: docker-multi
+    on:
+      branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: 
+      secure: $AWS_SECRET_KEY
